--- a/android/build.gradle
+++ b/android/build.gradle
@@ -48,6 +48,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlin0ptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
